made everthing work a bit better and sorted ou main memu
approved by the authority of kyle

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -121,14 +121,10 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="M_noise",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
-+ActionMappings=(ActionName="M_noise",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="M_silent",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
-+ActionMappings=(ActionName="M_silent",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
-+ActionMappings=(ActionName="M_use&kill",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="M_use&kill",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
-+ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F1)
 +AxisMappings=(AxisName="down",Scale=1.000000,Key=Down)
 +AxisMappings=(AxisName="down",Scale=1.000000,Key=S)
 +AxisMappings=(AxisName="left",Scale=1.000000,Key=A)
