--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -119,22 +119,22 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="end_typing",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=End)
++ActionMappings=(ActionName="end_typing",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tilde)
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F1)
++ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="down",Scale=1.000000,Key=Down)
 +AxisMappings=(AxisName="down",Scale=1.000000,Key=S)
 +AxisMappings=(AxisName="left",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="left",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
-+AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="LookUpRate",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="right",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="up",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="up",Scale=1.000000,Key=W)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
