rain in mainmenu

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -126,7 +126,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F1)
 +ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="down",Scale=1.000000,Key=Down)
 +AxisMappings=(AxisName="down",Scale=1.000000,Key=S)
 +AxisMappings=(AxisName="left",Scale=1.000000,Key=A)
